--- a/src/styles.css
+++ b/src/styles.css
@@ -1,93 +1,72 @@
 body {
-  background: linear-gradient(
-    108.1deg,
-    rgb(167, 220, 225) 11.2%,
-    rgb(217, 239, 242) 88.9%
-  );
-  font-family: Arial, sans-serif;
-  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-  color: blueviolet;
+  color: #878787;
   font-size: 24px;
   font-weight: 100;
   line-height: 28px;
-  margin: 0;
-}
-
-li {
-  color: rgb(135, 135, 135);
-  font-size: 16px;
-  font-weight: 100;
-  height: 19px;
-  line-height: 1;
-  list-style: none;
+  margin-bottom: 0;
 }
 
 ul {
-  margin: 0 0 10px;
+  margin: 0;
   padding: 0;
 }
 
-h6 {
-  font-family: roboto;
-  font-weight: 500;
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #878787;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
 }
 
-Week-days {
-  display: inline;
+li:first-letter {
+  text-transform: capitalize;
 }
 
-.divider-horizontal {
-  width: 100%;
-  height: 2px;
-  background-color: #c7c8c9;
-  margin: 15px 0px;
+a {
+  text-decoration: none;
 }
 
 .weather-app {
-  padding: 15px;
-  margin: 20px auto;
   max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
 }
 
-.temperature {
-  color: rgb(33, 33, 33);
-  font-size: 64px;
-  font-weight: 400;
-  line-height: 1;
-}
-
-.weather-icon {
-  height: 64px;
-  width: 70px;
-}
-
-.units {
-  position: relative;
-  top: -34px;
-}
-
-.search-form {
+.overview {
   margin-bottom: 20px;
 }
 
-.btn-success {
-  position: absolute;
-  top: 35px;
-  left: 850px;
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  color: black;
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
 }
 
-.emojis {
-  display: inline;
+.weather-temperature .active {
+  color: black;
+  cursor: default;
 }
 
-.vertical-line {
-  display: inline-block;
-  border-right: 1px solid black;
-  height: 70px;
-  padding-left: 2px;
-  padding-right: 16px;
-  width: 100px;
+.weather-temperature .active:hover {
+  text-decoration: none;
 }
